--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "org.sonarqube" version "1.2"
+}
+
 buildscript {
     repositories {
         jcenter()
@@ -45,4 +49,9 @@ dependencies {
 
 task createWrapper(type: Wrapper) {
   gradleVersion = '2.13'
+}
+
+sonarqube.properties {
+    property 'sonar.projectName', 'MoneySuperMarket GH Event tester'
+    property 'sonar.projectKey', 'com.moneysupermarket:gh-event-tester-service'
 }
