--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ systemProp.sonar.host.url=http://sonar1-eu1.moneysupermarket.com/
 systemProp.sonar.jdbc.url=jdbc:mysql://jenkins-master-mesos-slave.inf.inf1.gb.msm.internal:3306/sonar?useUnicode=true&amp;characterEncoding=utf
 systemProp.sonar.jdbc.username=sonar
 
-SONAR_PROJECT_ID='com.moneysupermarket:gh-event-tester-service'
+SONAR_PROJECT_ID=com.moneysupermarket:gh-event-tester-service
